--- a/Embedded.html
+++ b/Embedded.html
@@ -28,9 +28,9 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top ">
         <div class="container-fluid">
 
-            <div>
+            <div class="">
                 <a class="navbar-brand" href="./index.html">
-                    <img src="./Hero/logo-removebg-preview.png" width="70px" alt="">
+                    <img src="./Hero/logo-removebg-preview.png" width="60px" alt="">
                     <img src="./Hero/ENNOVAlogo.png" width="130px"></a>
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -39,10 +39,10 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="collapse navbar-collapse " id="navbarSupportedContent">
+            <div class="collapse navbar-collapse flex-grow-1 " id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex align-items-center fw-bold ">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                        <a class="nav-link" aria-current="page" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./about.html">About Us</a>
@@ -53,14 +53,14 @@
                             What we do
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="./ITService.html">OUR SERVICE</a></li>
-                            <li><a class="dropdown-item" href="./Nproduct.html">OUR PRODUCT</a></li>
+                            <li><a class="dropdown-item fw-bold " href="./ITService.html">OUR SERVICE</a></li>
+                            <li><a class="dropdown-item fw-bold " href="./Nproduct.html">OUR PRODUCT</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./Contact.html">Contact Us</a>
                     </li>
-                    <li><a href="tel:+917972911543" class="fw-bold m-2 btn btn-primary text-light">Call Now</a></li>
+                    <li><a href="tel:+917972911543" class="fw-bold m-1 btn btn-primary text-light">Call Now</a></li>
                 </ul>
             </div>
         </div>
@@ -113,13 +113,7 @@
 
                 <div class="col-lg-5 col-md-6">
                     <h2 class=" fw-bold ">Custom Embedded Software Development</h2>
-                    <p>Every embedded system needs embedded software to run properly and the term “Embedded Software,”
-                        is
-                        used for a set of code instructions meant for non-PC devices- either as a part of a
-                        microcontroller
-                        or as a part of another application. We at PsiBorg offer expert-class software development
-                        services
-                        for IoT systems.</p>
+                    <p>We create custom circuit board designs that work just right for you, making sure they're dependable and efficient. With our experienced team and advanced tools, we deliver quality designs quickly and affordably. Let us help you turn your ideas into reality with skill and care. Plus, we ensure that every design meets industry standards for optimal performance.</p>
                     <button type="button" class="btn btn-secondary">Get A Quote</button>
                 </div>
                 <div class="col-lg-1"></div>
@@ -132,7 +126,7 @@
 
     <div id="Iot_Firm">
         <section id="itimghideandview" class="container-fluid  ">
-            <h1 class="text-center mb-5 ">Embedded Firmware Design</h1>
+            <h1 class="text-center mb-5 ">IOT FIRMWARE DEVELOPMENT</h1>
             <div class="d-flex justify-content-center secitsolutionimgdiv ">
                 <img class="img-fluid " src="./Embedded/embedded firmware design.jpg" alt="">
             </div>
@@ -176,7 +170,7 @@
 
                 <div class="col-lg-5 col-md-6">
                     <h2 class=" fw-bold ">Printed Circuit Board Design & Layout Services</h2>
-                    <p>Our team at PsiBorg designs printed circuit boards (PCBs) of any complexity, be it multilayer,
+                    <p>Our team designs printed circuit boards (PCBs) of any complexity, be it multilayer,
                         high-speed PCBs, or any other type. Our skilled team can create boards from the start or improve
                         the
                         already existing electric circuit design.
