--- a/ITService.html
+++ b/ITService.html
@@ -25,9 +25,9 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top ">
         <div class="container-fluid">
 
-            <div>
+            <div class="">
                 <a class="navbar-brand" href="./index.html">
-                    <img src="./Hero/logo-removebg-preview.png" width="70px" alt="">
+                    <img src="./Hero/logo-removebg-preview.png" width="60px" alt="">
                     <img src="./Hero/ENNOVAlogo.png" width="130px"></a>
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -36,10 +36,10 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="collapse navbar-collapse " id="navbarSupportedContent">
+            <div class="collapse navbar-collapse flex-grow-1 " id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex align-items-center fw-bold ">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                        <a class="nav-link" aria-current="page" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./about.html">About Us</a>
@@ -50,14 +50,14 @@
                             What we do
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="./ITService.html">OUR SERVICE</a></li>
-                            <li><a class="dropdown-item" href="./Nproduct.html">OUR PRODUCT</a></li>
+                            <li><a class="dropdown-item fw-bold " href="./ITService.html">OUR SERVICE</a></li>
+                            <li><a class="dropdown-item fw-bold " href="./Nproduct.html">OUR PRODUCT</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./Contact.html">Contact Us</a>
                     </li>
-                    <li><a href="tel:+917972911543" class="fw-bold m-2 btn btn-primary text-light">Call Now</a></li>
+                    <li><a href="tel:+917972911543" class="fw-bold m-1 btn btn-primary text-light">Call Now</a></li>
                 </ul>
             </div>
         </div>
@@ -180,7 +180,7 @@
                             <li><i class="fa-solid fa-caret-right"></i><a href="./Electrical.html#Panel_Specifi">Panel Specification BOM</a></li>
                             <li><i class="fa-solid fa-caret-right"></i><a href="./Electrical.html#Earthing">Earthing, Lighting layout</a></li>
                             <li><i class="fa-solid fa-caret-right"></i><a href="./Electrical.html#Cable">Cable Shedulding Engineering</a></li>
-                            <li><i class="fa-solid fa-caret-right"></i><a href="./Electrical.html#Design&_M">Design & Manufacturing (PCC, MCC, VFD)</a></li>
+                            <li><i class="fa-solid fa-caret-right"></i><a href="./Electrical.html#Design&_M">Design & Manufacturing of Pnels (PCC, MCC, VFD)</a></li>
                             <li><i class="fa-solid fa-caret-right"></i><a href="./Electrical.html#Design_PLC">Design PLC Panels</a></li>
                         </ul>
                         <a href="./Electrical.html"><button type="button" class="btn btn-secondary">MORE INFO</button></a>
