--- a/about.html
+++ b/about.html
@@ -20,9 +20,9 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top ">
         <div class="container-fluid">
 
-            <div>
+            <div class="">
                 <a class="navbar-brand" href="./index.html">
-                    <img src="./Hero/logo-removebg-preview.png" width="70px" alt="">
+                    <img src="./Hero/logo-removebg-preview.png" width="60px" alt="">
                     <img src="./Hero/ENNOVAlogo.png" width="130px"></a>
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -31,10 +31,10 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="collapse navbar-collapse " id="navbarSupportedContent">
+            <div class="collapse navbar-collapse flex-grow-1 " id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex align-items-center fw-bold ">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                        <a class="nav-link" aria-current="page" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./about.html">About Us</a>
@@ -45,14 +45,14 @@
                             What we do
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="./ITService.html">OUR SERVICE</a></li>
-                            <li><a class="dropdown-item" href="./Nproduct.html">OUR PRODUCT</a></li>
+                            <li><a class="dropdown-item fw-bold " href="./ITService.html">OUR SERVICE</a></li>
+                            <li><a class="dropdown-item fw-bold " href="./Nproduct.html">OUR PRODUCT</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./Contact.html">Contact Us</a>
                     </li>
-                    <li><a href="tel:+917972911543" class="fw-bold m-2 btn btn-primary text-light">Call Now</a></li>
+                    <li><a href="tel:+917972911543" class="fw-bold m-1 btn btn-primary text-light">Call Now</a></li>
                 </ul>
             </div>
         </div>
@@ -85,8 +85,8 @@
 
  
 
-    <section>
-        <h2 class="fw-bold ">OUR journey</h2>
+    <section >
+        <h2 class="fw-bold ourheading">OUR journey</h2>
         <div class="tl">
             <div class="tl-container tl-left">
                 <div class="tl-content">
@@ -272,7 +272,7 @@
             <!-- <div class="col-md-1"></div> -->
             <div class="  col-lg-1"></div>
             <div class="col-md-6 col-lg-2">
-                <h3 class="mb-1  fw-bold ">COMPANY</h3>
+                <h3 class="mb-2  fw-bold ">COMPANY</h3>
                 <div class="d-flex flex-column divancal">
                     <a href="./index.html">HOME</a>
                     <a href="./about.html">ABOUT US</a>
@@ -282,7 +282,7 @@
                 </div>
             </div>
             <div class="col-md-6 col-lg-4">
-                <h3 class="mb-1 fw-bold ">CONTACT INFORMATION</h3>
+                <h3 class="mb-2 fw-bold ">CONTACT INFORMATION</h3>
 
                 <p> <i class="far fa-clock"></i> 9.30 - 18.30 (IST)</p>
                 <p><i class="fas fa-phone"></i> +91-7972911543, +91-8830458682</p>
