--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                             What we do
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="./ITService.html">OUR SERVICE</a></li>
-                            <li><a class="dropdown-item" href="./Nproduct.html">OUR PRODUCT</a></li>
+                            <li><a class="dropdown-item fw-bold " href="./ITService.html">OUR SERVICE</a></li>
+                            <li><a class="dropdown-item fw-bold " href="./Nproduct.html">OUR PRODUCT</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -76,17 +76,16 @@
 
                     <div id="imgheading">
                         <h1>ENNOVA TECHNOLOGY</h1>
-                        <h4 class="herosubhead">Your Problem Our Smart Solution</h4>
+                        <h4 class="herosubhead">Your Problem Our Smart Solution.</h4>
                     </div>
                 </section>
             </div>
             <div class="carousel-item" data-bs-interval="2000">
                 <section id="hero">
-
-                    <img src="./Hero/ioHERO.jpg" alt="">
+                   <img src="./Hero/ioHERO.jpg" alt="">
                     <div class="carousel-caption">
                         <h1 class="animated fadeInRight">Digital I/O Card</h1>
-                        <h5 class="animated fadeInRight">"Optimize control systems with our Embedded IO Card for seamless
+                        <h5 class="animated fadeInRight">"Optimize Control Systems with our Embedded IO Card for seamless
                             integration and peak performance."</h5>
                         <a href="./io.html"> <button id="scrolbtn" class="">Learn More</button></a>
                     </div>
@@ -143,7 +142,7 @@
 
             <div class="col-lg-5 col-md-6 font aboutpara" data-aos="fade-up" data-aos-duration="2500">
                 <h1>- Get to Know About us -</h1>
-                <h5 class="mt-4">At Ennova Technology, we specialize in creating innovative solutions for businesses. From designing
+                <h5 class="mt-3">At Ennova Technology, we specialize in creating innovative solutions for businesses. From designing
                     electronics to developing websites, software, and apps, we offer a wide range of services to help
                     businesses succeed. We also provide cutting-edge IoT solutions for industrial automation, making
                     processes more efficient and effective. Our goal is to use technology to solve problems and drive
@@ -165,8 +164,8 @@
                     <div class="row g-0">
 
                         <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title">IOT Based Products</h5>
+                            <div class="card-body chooseatag">
+                                <a href="./Embedded.html#Iot_Firm"><h5 class="card-title">IOT Based Products</h5></a>
 
                             </div>
                         </div>
@@ -177,8 +176,8 @@
                     <div class="row g-0">
 
                         <div class="">
-                            <div class="card-body">
-                                <h5 class="card-title">Industrial Automation Products</h5>
+                            <div class="card-body chooseatag">
+                                <a href="./Nproduct.html"><h5 class="card-title">Industrial Automation Products</h5></a>
 
                             </div>
                         </div>
@@ -189,9 +188,9 @@
                     <div class="row">
 
                         <div class="">
-                            <div class="card-body">
-                                <h5 class="card-title">Industrial Panel Manufacturer <br> PCC, MCC, VFD, PLC
-                                </h5>
+                            <div class="card-body chooseatag">
+                                <a href="./Electrical.html#Design&_M"><h5 class="card-title">Industrial Panel Manufacturer <br> PCC, MCC, VFD, PLC
+                                </h5></a>
 
                             </div>
                         </div>
@@ -205,8 +204,8 @@
                     <div class="row g-0">
 
                         <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title">IT Solutions</h5>
+                            <div class="card-body chooseatag">
+                                <a href="./IT.html"><h5 class="card-title">IT Solutions</h5></a>
 
                             </div>
                         </div>
@@ -217,8 +216,8 @@
                     <div class="row g-0">
 
                         <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title">IOT Solutions</h5>
+                            <div class="card-body chooseatag">
+                                <a href="./IT.html#Iot_ser"><h5 class="card-title">IOT Solutions</h5></a>
 
                             </div>
                         </div>
@@ -229,8 +228,8 @@
                     <div class="row g-0">
 
                         <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title">Electronics Based Product Development</h5>
+                            <div class="card-body chooseatag">
+                                <a href="./Embedded.html"><h5 class="card-title">Electronics Based Product Development</h5></a>
 
                             </div>
                         </div>
@@ -307,7 +306,7 @@
             <!-- <div class="col-md-1"></div> -->
             <div class="  col-lg-1"></div>
             <div class="col-md-6 col-lg-2">
-                <h3 class="mb-1  fw-bold ">COMPANY</h3>
+                <h3 class="mb-2  fw-bold ">COMPANY</h3>
                 <div class="d-flex flex-column divancal">
                     <a href="./index.html">HOME</a>
                     <a href="./about.html">ABOUT US</a>
@@ -317,7 +316,7 @@
                 </div>
             </div>
             <div class="col-md-6 col-lg-4">
-                <h3 class="mb-1 fw-bold ">CONTACT INFORMATION</h3>
+                <h3 class="mb-2 fw-bold ">CONTACT INFORMATION</h3>
 
                 <p> <i class="far fa-clock"></i> 9:30 - 18:30 (IST)</p>
                 <p><i class="fas fa-phone"></i> +91-7972911543, +91-8830458682</p>
