--- a/secondcv.html
+++ b/secondcv.html
@@ -24,9 +24,9 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top ">
         <div class="container-fluid">
 
-            <div>
+            <div class="">
                 <a class="navbar-brand" href="./index.html">
-                    <img src="./Hero/logo-removebg-preview.png" width="70px" alt="">
+                    <img src="./Hero/logo-removebg-preview.png" width="60px" alt="">
                     <img src="./Hero/ENNOVAlogo.png" width="130px"></a>
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -35,10 +35,10 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="collapse navbar-collapse " id="navbarSupportedContent">
+            <div class="collapse navbar-collapse flex-grow-1 " id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex align-items-center fw-bold ">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                        <a class="nav-link" aria-current="page" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./about.html">About Us</a>
@@ -49,14 +49,14 @@
                             What we do
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="./ITService.html">OUR SERVICE</a></li>
-                            <li><a class="dropdown-item" href="./Nproduct.html">OUR PRODUCT</a></li>
+                            <li><a class="dropdown-item fw-bold " href="./ITService.html">OUR SERVICE</a></li>
+                            <li><a class="dropdown-item fw-bold " href="./Nproduct.html">OUR PRODUCT</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./Contact.html">Contact Us</a>
                     </li>
-                    <li><a href="tel:+917972911543" class="fw-bold m-2 btn btn-primary text-light">Call Now</a></li>
+                    <li><a href="tel:+917972911543" class="fw-bold m-1 btn btn-primary text-light">Call Now</a></li>
                 </ul>
             </div>
         </div>
